# opengl-starter

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  shader.frag  shader.vert
shaders/: shader.frag  shader.vert
source/: CMakeLists.txt  camera.hpp  entity.hpp  list.hpp  main.cpp  math.hpp  mesh.hpp  shader.hpp  tests.cpp  tiny_obj_loader.h  types.hpp
source/imgui/: imgui.cpp  imgui.h  imstb_textedit.h
test/: math.hpp
